mobile.css mini

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,299 +1,1 @@
-*{
-    
-    margin: 0px;
-    padding: 0px;
-   
-}
-
-@media screen and (max-width: 1100px) {
-    .nav-left{
-        width: 35%;
-    }
-    .nav-right{
-        width: 65%;
-    }
-    .landing-page{
-        width: 100%;
-        background: url('../images/bg-cover5.png');
-        background-attachment: fixed;
-        background-position: center center;
-        background-size: cover;
-        position: relative;
-    }
-    .cover-box{
-        width: 60%;
-        margin: auto;
-        text-align: center;
-    }
-    .about-section{
-        height: 1100px;
-    }
-    .about-page{
-        height: 460px;
-    }
-    .about-image img{
-        height: 80%;
-        width: 100%;
-    }
-    .circle img{
-        height: 60%;
-        width: 68%;
-    }
-    .footer-col-0{
-        text-align: left;
-    }
-
-    .newsletter-box{
-        padding: 8px;
-        padding-right: 10px;
-        margin: 4px;
-        margin-right: 10px;
-        margin-left: 2px;
-    }
-    .newsletter-box h3{
-        text-align: left;
-        margin-top: 16px;
-    }
-    .newsletter{
-        padding: 5px;
-        margin-right: 8px; 
-    }
-    .newsletter input, .newsletter ::placeholder{
-        font-size: 16px;
-    }
-
-    .cover-box{
-        border: 2px solid white;
-        padding: 18px 10px;
-        width: 60%;
-        height: auto;   
-    }
-    
-}
-@media (max-width: 950px){
-    .cover-box{
-        border: 2px solid white;
-        padding: 18px 15px;
-        width: 70%;
-        height: auto;   
-    }
-    .about-section{
-        height: 1170px;
-        height: auto;
-    }
-    .about-page{
-        height: 500px;
-        height: auto;
-        padding: 1rem;
-        height: auto;
-    }
-    .about-image{
-        width: 100%; 
-        margin: 8px;
-        margin-right: 20px;
-        margin: 10px auto;
-    }
-    .about-contents{
-        width: 100%;
-        margin: auto;
-        padding: 5px;
-    }
-    .about-contents h2{
-        margin-bottom: 20px;
-    }
-    .circle img{
-        height: 50%;
-        width: 42%;
-        display: inline-block;
-        margin: auto;
-    }
-    .move-up{
-        
-        flex-direction: column;
-    }
-}
-@media (max-width: 780px){
-    .cover-box{
-        border: 2px solid white;
-        padding: 18px 15px;
-        width: 70%;
-        height: auto;   
-    }
-    .nav-left{
-        width: 30%;
-        padding: 10px;
-    }
-    .nav-right{
-        width: 70%;
-    }
-    .nav-right li{
-        margin: 18px 20px;
-    }
-    .hide{
-        display: none;  
-        width: 0%;
-    }
-    .expand{
-        display: flex;
-        width: 500%;
-    }
-    .footer-section{
-        height: 1350px;
-        height: auto;
-    }
-    .footer{
-      
-        flex-flow: wrap;
-        height: 650px;
-        height: auto;
-    }
-    .footer-col-0, .footer-col-1, .footer-col-2{
-        width: 50%;
-    }
-    .newsletter-box{
-        padding: 8px;
-        padding-right: 10px;
-        margin: 4px;
-        margin-right: 10px;
-        margin-left: 2px;
-    }
-    .newsletter-box h3{
-        text-align: left;
-    }
-    .newsletter{
-        padding: 5px;
-        margin-right: 8px;
-        
-    }  
-}
-@media (max-width: 675px){
-    
-    .nav-right li{
-        margin: 18px 14px;
-    }
-    
-    .container .info{
-        width: 100%;
-    }
-    .contact-form{
-        width: 70%;
-    }
-    .footer-section{
-        height: 1000px;
-        
-    }
-    .footer{
-        flex-direction: column;
-        height: 960px;
-    }
-    .footer-col-0{
-        width: 100%;
-    }
-    .footer-col-1{
-        width: 100%;
-    }
-    .footer-col-2{
-        width: 100%;
-    }
-    .newsletter-box{
-        padding: 8px;
-        padding-right: 10px;
-        margin: 4px;
-        margin-right: 10px;
-        margin-left: 2px;
-    }
-    .newsletter-box h3{
-        text-align: left;
-    }
-    .newsletter{
-        padding: 5px;
-        margin-right: 8px; 
-    }
-    .newsletter input, .newsletter ::placeholder{
-        font-size: 20px;
-    }
-    
-   
-}
-@media (max-width:620){
-    .footer{
-         flex-flow: nowrap;
-    }
-    .newsletter-box{
-       
-        width: 1%;
-        flex-direction: column;
-    }
-
-}
-@media (max-width: 575px){
-    .nav-left{
-        width: 20%;
-        padding-left: 0;
-    }
-    .nav-right{
-        width: 80%;
-    }
-    .nav-right li{
-        margin: 18px 4px;
-        font-size: 20px;
-        margin: auto;
-    }
-}
-@media (max-width: 425px){
-    
-    .nav-left{
-        width: 10%;
-        padding-left: 0;
-    }
-    .nav-right{
-        width: 90%;
-    }
-    .nav-right li{
-       
-        font-size: 18px;
-    }
-    .logo{
-        height: 70px;
-        width: 70px;
-        margin-left: 0px;
-    }
-}
-@media (max-width: 395px)
-{
-    .logo{
-        height: 60px;
-        width: 60px;
-    }
-    .nav-right li{
-        margin: 18px 2px;
-        font-size: 16px;
-        margin: auto;
-    }
-    
-    .container{
-        width: 130%;
-    }
-    .contact-form{
-        width: 70%;
-    }  
-}
-@media (max-width: 352px){
-    .container .info .box .contact-text{
-        font-size: 14px;
-        margin-left: 4px;
-    }
-}
-@media (max-width: 330px)
-{
-    .timeline li{
-        font-size: 14px;
-    }
-    .logo{
-        height: 50px;
-        width: 50px;
-    }
-   .nav-right li{
-       font-size: 14px;
-   }
-}
+*{margin:0px;padding:0px}@media screen and (max-width: 1100px){.nav-left{width:35%}.nav-right{width:65%}.landing-page{width:100%;background:url('../images/bg-cover5.png');background-attachment:fixed;background-position:center center;background-size:cover;position:relative}.cover-box{width:60%;margin:auto;text-align:center}.about-section{height:1100px}.about-page{height:460px}.about-image img{height:80%;width:100%}.circle img{height:60%;width:68%}.footer-col-0{text-align:left}.newsletter-box{padding:8px;padding-right:10px;margin:4px;margin-right:10px;margin-left:2px}.newsletter-box h3{text-align:left;margin-top:16px}.newsletter{padding:5px;margin-right:8px}.newsletter input, .newsletter ::placeholder{font-size:16px}.cover-box{border:2px solid white;padding:18px 10px;width:60%;height:auto}}@media (max-width: 950px){.cover-box{border:2px solid white;padding:18px 15px;width:70%;height:auto}.about-section{height:1170px;height:auto}.about-page{height:500px;height:auto;padding:1rem;height:auto}.about-image{width:100%;margin:8px;margin-right:20px;margin:10px auto}.about-contents{width:100%;margin:auto;padding:5px}.about-contents h2{margin-bottom:20px}.circle img{height:50%;width:42%;display:inline-block;margin:auto}.move-up{flex-direction:column}}@media (max-width: 780px){.cover-box{border:2px solid white;padding:18px 15px;width:70%;height:auto}.nav-left{width:30%;padding:10px}.nav-right{width:70%}.nav-right li{margin:18px 20px}.hide{display:none;width:0%}.expand{display:flex;width:500%}.footer-section{height:1350px;height:auto}.footer{flex-flow:wrap;height:650px;height:auto}.footer-col-0,.footer-col-1,.footer-col-2{width:50%}.newsletter-box{padding:8px;padding-right:10px;margin:4px;margin-right:10px;margin-left:2px}.newsletter-box h3{text-align:left}.newsletter{padding:5px;margin-right:8px}}@media (max-width: 675px){.nav-right li{margin:18px 14px}.container .info{width:100%}.contact-form{width:70%}.footer-section{height:1000px}.footer{flex-direction:column;height:960px}.footer-col-0{width:100%}.footer-col-1{width:100%}.footer-col-2{width:100%}.newsletter-box{padding:8px;padding-right:10px;margin:4px;margin-right:10px;margin-left:2px}.newsletter-box h3{text-align:left}.newsletter{padding:5px;margin-right:8px}.newsletter input, .newsletter ::placeholder{font-size:20px}}@media (max-width:620){.footer{flex-flow:nowrap}.newsletter-box{width:1%;flex-direction:column}}@media (max-width: 575px){.nav-left{width:20%;padding-left:0}.nav-right{width:80%}.nav-right li{margin:18px 4px;font-size:20px;margin:auto}}@media (max-width: 425px){.nav-left{width:10%;padding-left:0}.nav-right{width:90%}.nav-right li{font-size:18px}.logo{height:70px;width:70px;margin-left:0px}}@media (max-width: 395px){.logo{height:60px;width:60px}.nav-right li{margin:18px 2px;font-size:16px;margin:auto}.container{width:130%}.contact-form{width:70%}}@media (max-width: 352px){.container .info .box .contact-text{font-size:14px;margin-left:4px}}@media (max-width: 330px){.timeline li{font-size:14px}.logo{height:50px;width:50px}.nav-right li{font-size:14px}}
